--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "PurpleUltralisk",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.12.1",
     "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
